# SecurityQuestAcademy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  USAGE.md
games/: __init__.py  base.py  bashquest.py  ciscoquest.py  cryptoquest.py  cyberquest.py  reversequest.py  webhackquest.py  windowsquest.py
securityquest/: __init__.py  __main__.py  cli.py  config.py
standalone/: Bashquest.py  Cyberquest.py  Windowsquest.py
tests/: test_cli.py  test_config.py  test_engine.py  test_engine_runtime.py  test_gameplay.py  test_quest_config_integrity.py  test_quest_levels.py  test_quest_wrappers.py  test_run_game.py  test_standalone_bashwindows_engine.py  test_standalone_bashwindows_levels.py  test_standalone_bashwindows_menu.py  test_standalone_bashwindows_menu2.py  test_standalone_bashwindows_misc.py  test_standalone_bashwindows_play.py  test_standalone_cyberquest_engine.py  test_standalone_cyberquest_levels.py  test_standalone_cyberquest_menu.py  test_standalone_cyberquest_misc.py  test_standalone_cyberquest_play.py  test_wrappers.py
