[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "securityquest-academy"
version = "2.0.0"
description = "Interactive cybersecurity training platform — 700 hands-on challenges across 7 domains"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "arkanzasfeziii"}]
keywords = [
    "cybersecurity", "training", "ctf", "education", "ethical-hacking",
    "python", "bash", "networking", "cryptography", "reverse-engineering",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/arkanzasfeziii/SecurityQuestAcademy"
Repository = "https://github.com/arkanzasfeziii/SecurityQuestAcademy"
Issues = "https://github.com/arkanzasfeziii/SecurityQuestAcademy/issues"

[project.scripts]
securityquest = "securityquest.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "B904"]

[tool.ruff.lint.per-file-ignores]
# Trailing whitespace inside embedded PowerShell solution scripts, not real code.
"standalone/Windowsquest.py" = ["W293"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
timeout = 60

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
